Added contents and styles to the why section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 </ul>
             </nav>
         </header>
+
         <main>
+            <!-- Side Navigation -->
             <nav class="side-nav" id="side-nav">
                 <ul>
                     <li>
@@ -85,6 +87,29 @@
                     </li>
                 </ul>
             </nav>
+
+            <!-- Why - Dayna -->
+            <section class="why section" id="section">
+                <img
+                    src="images/logo-why.svg"
+                    alt="eco symbol in the background"
+                    class="e-bg-symbol"
+                />
+                <div class="text-content">
+                    <h2>Attract liquidity, simplify UX, supercharge revenue</h2>
+                    <p>
+                        Integrate Eco to instantly aggregate liquidity in any
+                        supported stablecoin from any connected rollup settling
+                        to Ethereum.
+                    </p>
+                    <p>
+                        Integrate Eco to enable easy onboarding, intuitive
+                        balance aggregation and one click send to anywhere,
+                        whatever your use case. With Eco, you can focus on what
+                        matters: building something people want.
+                    </p>
+                </div>
+            </section>
         </main>
 
         <footer class="site-footer" id="site-footer">
