Updated navigation and footer layouts

--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
             </div>
             <nav class="site-nav-list">
                 <ul class="site-nav-top">
-                    <li>
+                    <li class="menu-blog">
                         <img src="images/blog-icon.svg" alt="Blog icon" />
                         <a href="">Blog</a>
                     </li>
-                    <li>
+                    <li class="menu-docs">
                         <img src="images/docs-icon.svg" alt="Docs icon" />
                         <a href="">Docs</a>
                     </li>
-                    <li>
+                    <li class="menu-forum">
                         <img src="images/forum-icon.svg" alt="Forum icon" /><a
                             href=""
                             >Forum</a
                         >
                     </li>
-                    <li>
+                    <li class="menu-support">
                         <img
                             src="images/support-icon.svg"
                             alt="Support icon"
                         /><a href="">Support</a>
                     </li>
-                    <li>
+                    <li class="menu-jobs">
                         <img src="images/jobs-icon.svg" alt="Jobs icon" /><a
                             href=""
                             >Jobs</a
