--- a/index.html
+++ b/index.html
@@ -88,6 +88,28 @@
                 </ul>
             </nav>
 
+            <!-- Home - Ricky -->
+            <section class="home-section" id="section">
+                <img
+                    src="images/eco-logo.svg"
+                    alt="eco symbol in the background"
+                    class="e-bg-symbol"
+                />
+                <div class="text-content">
+                    <h2>One Click.
+                        Full Send.</h2>
+                    <p>
+                        Eco enables apps to unlock stablecoin liquidity from any connected chain and give users the simplest onchain experience.
+                    </p>
+                </div>
+
+                <img
+                    src="images/arrow-down.svg"
+                    alt="arrow icon pointing down"
+                    class="arrow-down"
+                />
+            </section>
+
             <!-- Why - Dayna -->
             <section class="why section" id="section">
                 <img
