Updated copyright year and side nav

--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
                     class="e-bg-symbol"
                 />
                 <div class="text-content">
-                    <h2>One Click.
-                        Full Send.</h2>
+                    <h2>One Click. Full Send.</h2>
                     <p>
-                        Eco enables apps to unlock stablecoin liquidity from any connected chain and give users the simplest onchain experience.
+                        Eco enables apps to unlock stablecoin liquidity from any
+                        connected chain and give users the simplest onchain
+                        experience.
                     </p>
                 </div>
 
@@ -138,7 +139,7 @@
             <nav class="footer-desktop">
                 <ul>
                     <li>
-                        <p>&copy; 2024 Eco</p>
+                        <p>&copy; 2025 Eco</p>
                     </li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Jobs</a></li>
