added stay updated section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
                     </p>
                 </div>
             </section>
+
+            <!-- stay-updated-section -->
+            <section>
+
+            </section>
         </main>
 
         <footer class="site-footer" id="site-footer">
