added about section in html

--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
                 />
             </section>
 
+            <!--About - Steph  -->
+            <section>
+                <h2>A protocol for stablecoins</h2>
+   
+                <p>And for the apps that use them</p>
+               
+                <p>
+                  Eco is designed to be the default protocol for apps that use stablecoins
+                  or need stablecoin liquidity. Eco provides a frictionless stablecoin
+                  experience that accelerates user onboarding and streamlines money
+                  movement onchain.
+                </p>
+            </section>
             <!-- Why - Dayna -->
             <section class="why section" id="section">
                 <img
@@ -133,7 +146,10 @@
                     </p>
                 </div>
             </section>
-
+            <!-- Design - Steph -->
+             <section>
+                
+             </section>
             <!-- stay-updated-section -->
             <section>
 
