added about partial and set up for watch

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </section>
 
             <!--About - Steph  -->
-            <section>
+            <section class="about section" >
                 <h2>A protocol for stablecoins</h2>
    
                 <p>And for the apps that use them</p>
@@ -148,7 +148,7 @@
             </section>
             <!-- Design - Steph -->
              <section>
-                
+
              </section>
             <!-- stay-updated-section -->
             <section>
