Added styles to home section

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             </nav>
 
             <!-- Home - Ricky -->
-            <section class="home-section" id="section">
+            <section class="home section" id="section">
                 <img
-                    src="images/eco-logo.svg"
+                    src="images/logo-home.svg"
                     alt="eco symbol in the background"
                     class="e-bg-symbol"
                 />
@@ -104,11 +104,13 @@
                     </p>
                 </div>
 
-                <img
-                    src="images/arrow-down.svg"
-                    alt="arrow icon pointing down"
-                    class="arrow-down"
-                />
+                <div class="arrow-icon-container">
+                    <img
+                        src="images/arrow-down.svg"
+                        alt="arrow icon pointing down"
+                        class="arrow-down"
+                    />
+                </div>
             </section>
 
             <!--About - Steph  -->
