Added styles for the go-down-btn

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                     class="e-bg-symbol"
                 />
                 <div class="text-content">
-                    <h2>One Click. Full Send.</h2>
+                    <h2>One Click. <br />
+                        Full Send.</h2>
                     <p>
                         Eco enables apps to unlock stablecoin liquidity from any
                         connected chain and give users the simplest onchain
@@ -111,11 +112,13 @@
                 </div>
 
                 <div class="arrow-icon-container">
-                    <img
-                        src="images/arrow-down.svg"
-                        alt="arrow icon pointing down"
-                        class="arrow-down"
-                    />
+                    <button class="go-down-btn">
+                        <img
+                            src="images/arrow-down.svg"
+                            alt="arrow icon pointing down"
+                            class="arrow-down"
+                        />
+                    </button>
                 </div>
             </section>
 
