added stay-updated page

--- a/index.html
+++ b/index.html
@@ -201,7 +201,27 @@
             </section>
 
             <!-- stay-updated-section -->
-            <section></section>
+            <section class="stay-updated-section">
+                <img src="images/eco-logo.svg" 
+                alt="eco symbol in the background" 
+                class="e-big-symbol"
+                />
+
+                <div>
+                    <h2 style="color: rgb(19, 25, 44);">
+                        Stay Updated
+                    </h2>
+                    <p style="color: rgb(35, 44, 71);">
+                        If you’re building onchain or want to bring your users there, watch for early access opening soon.
+                    </p>
+                </div>
+
+                <div class="get-updates">
+                    <button class="get-updates">
+                        <a href="">Get Updates</a>
+                    </button>
+                </div>
+            </section>
         </main>
 
         <footer class="site-footer" id="site-footer">
