added css for stay updated section and fixed some labelling

--- a/index.html
+++ b/index.html
@@ -201,13 +201,14 @@
             </section>
 
             <!-- stay-updated-section -->
-            <section class="stay-updated-section">
-                <img src="images/eco-logo.svg" 
-                alt="eco symbol in the background" 
-                class="e-big-symbol"
+            <section class="stay updated section">
+                <img 
+                    src="images/logo-stay-updated.svg" 
+                    alt="eco symbol in the background" 
+                    class="e-bg-symbol"
                 />
 
-                <div>
+                <div class="text-content">
                     <h2 style="color: rgb(19, 25, 44);">
                         Stay Updated
                     </h2>
