Aligned the arrow button with the text-content

--- a/index.html
+++ b/index.html
@@ -109,21 +109,24 @@
                         connected chain and give users the simplest onchain
                         experience.
                     </p>
+                    
+                    <div class="arrow-icon-container">
+                        <button class="go-down-btn">
+                            <a href="#about-section">
+                                <img
+                                    src="images/arrow-down.svg"
+                                    alt="arrow icon pointing down"
+                                    class="arrow-down"
+                                />
+                            </a>
+                        </button>
+                    </div>
                 </div>
 
-                <div class="arrow-icon-container">
-                    <button class="go-down-btn">
-                        <img
-                            src="images/arrow-down.svg"
-                            alt="arrow icon pointing down"
-                            class="arrow-down"
-                        />
-                    </button>
-                </div>
             </section>
 
             <!--About - Steph  -->
-            <section class="about section">
+            <section class="about section" id="about-section">
                 <img
                     src="images/logo-about.svg"
                     alt="eco symbol in the background"
