Changed the html for the button on home section

--- a/index.html
+++ b/index.html
@@ -109,20 +109,17 @@
                         connected chain and give users the simplest onchain
                         experience.
                     </p>
-                    
-                    <div class="arrow-icon-container">
-                        <button class="go-down-btn">
-                            <a href="#about-section">
-                                <img
-                                    src="images/arrow-down.svg"
-                                    alt="arrow icon pointing down"
-                                    class="arrow-down"
-                                />
-                            </a>
-                        </button>
-                    </div>
-                </div>
 
+                    <a href="#about-section" class="arrow-icon-container">
+                        <div class="go-down-btn">
+                            <img
+                                src="images/arrow-down.svg"
+                                alt="arrow icon pointing down"
+                                class="arrow-down"
+                            />
+                        </div>
+                    </a>
+                </div>
             </section>
 
             <!--About - Steph  -->
