Added side-nav hover functionality

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <ul>
                     <li>
                         <a href="#home-section" class="colorChange"
-                            ><span class="nav-home">Home</span></a
+                            ><span id="nav-home">Home</span></a
                         >
                     </li>
                     <li>
