Fixed side-nav display issue

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="styles/styles.css" />
         <script src="scripts/script.js" defer></script>
     </head>
@@ -75,27 +75,27 @@
             <nav class="side-nav" id="side-nav">
                 <ul>
                     <li>
-                        <a href="#home-section" class="colorChange"
+                        <a href="#home" class="colorChange"
                             ><span id="nav-home">Home</span></a
                         >
                     </li>
                     <li>
-                        <a href="#about-section" class="colorChange"
+                        <a href="#about" class="colorChange"
                             ><span id="nav-about">About</span></a
                         >
                     </li>
                     <li>
-                        <a href="#why-section" class="colorChange"
+                        <a href="#why" class="colorChange"
                             ><span id="nav-why">Why</span></a
                         >
                     </li>
                     <li>
-                        <a href="#design-section" class="colorChange"
+                        <a href="#design" class="colorChange"
                             ><span id="nav-design">Design</span></a
                         >
                     </li>
                     <li>
-                        <a href="#stay-updated-section" class="colorChange"
+                        <a href="#stay-updated" class="colorChange"
                             ><span id="nav-updated">Stay Updated</span></a
                         >
                     </li>
@@ -103,7 +103,7 @@
             </nav>
 
             <!-- Home - Ricky -->
-            <section class="home section" id="home-section">
+            <section class="home section" id="home">
                 <img
                     src="images/logo-home.svg"
                     alt="eco symbol in the background"
@@ -120,7 +120,7 @@
                         experience.
                     </p>
 
-                    <a href="#about-section" class="arrow-icon-container">
+                    <a href="#about" class="arrow-icon-container">
                         <div class="go-down-btn">
                             <img
                                 src="images/arrow-down.svg"
@@ -133,7 +133,7 @@
             </section>
 
             <!--About - Steph  -->
-            <section class="about section" id="about-section">
+            <section class="about section" id="about">
                 <img
                     src="images/logo-about.svg"
                     alt="eco symbol in the background"
@@ -150,21 +150,20 @@
                         accelerates user onboarding and streamlines money
                         movement onchain.
                     </p>
-               
 
-                <div class="more-docs">
-                    <button class="learn-more">
-                        <a href="https://eco.com/blog/">Learn More</a>
-                    </button>
-                    <button class="read-docs">
-                        <a href="https://eco.com/docs/home">Read Docs</a>
-                    </button>
+                    <div class="more-docs">
+                        <button class="learn-more">
+                            <a href="https://eco.com/blog/">Learn More</a>
+                        </button>
+                        <button class="read-docs">
+                            <a href="https://eco.com/docs/home">Read Docs</a>
+                        </button>
+                    </div>
                 </div>
-            </div>
             </section>
 
             <!-- Why - Dayna -->
-            <section class="why section" id="why-section">
+            <section class="why section" id="why">
                 <img
                     src="images/logo-why.svg"
                     alt="eco symbol in the background"
@@ -188,7 +187,7 @@
 
             <!-- Design - Steph -->
 
-            <section class="design section" id="design-section">
+            <section class="design section" id="design">
                 <img
                     src="images/logo-design.svg"
                     alt="eco symbol in the background"
@@ -205,18 +204,17 @@
                         up for the most capital efficient stablecoin transaction
                         execution with the simplest possible user experience.
                     </p>
-                
 
-                <div class="more-details">
-                    <button class="more-details">
-                        <a href="https://eco.com/docs/home">More Details</a>
-                    </button>
+                    <div class="more-details">
+                        <button class="more-details">
+                            <a href="https://eco.com/docs/home">More Details</a>
+                        </button>
+                    </div>
                 </div>
-            </div>
             </section>
 
             <!-- stay-updated-section -->
-            <section class="stay updated section" id="stay-updated-section">
+            <section class="stay updated section" id="stay-updated">
                 <img
                     src="images/logo-stay-updated.svg"
                     alt="eco symbol in the background"
