changed line 99 span id to "nav-stay-updated"

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </li>
                     <li>
                         <a href="#stay-updated" class="colorChange"
-                            ><span id="nav-updated">Stay Updated</span></a
+                            ><span id="nav-stay-updated">Stay Updated</span></a
                         >
                     </li>
                 </ul>
