changed class id

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </section>
 
             <!-- stay-updated-section -->
-            <section class="stay updated section" id="stay-updated">
+            <section class="stay-updated section" id="stay-updated">
                 <img
                     src="images/logo-stay-updated.svg"
                     alt="eco symbol in the background"
