Minor fix in script, fixed hyperlinks in navigation and added favicon

--- a/index.html
+++ b/index.html
@@ -3,21 +3,47 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Eco: Accelerating How Money Moves Onchain</title>
+
+        <!-- Favicon -->
+        <link
+            rel="icon"
+            type="image/png"
+            href="images/favicon/favicon-96x96.png"
+            sizes="96x96"
+        />
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            href="images/favicon/favicon.svg"
+        />
+        <link rel="shortcut icon" href="images/favicon/favicon.ico" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="images/favicon/apple-touch-icon.png"
+        />
+        <link rel="manifest" href="images/favicon/site.webmanifest" />
+
+        <!-- Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet"
         />
+
+        <!-- Stylesheet -->
         <link rel="stylesheet" href="styles/styles.css" />
+
+        <!-- Script -->
         <script src="scripts/script.js" defer></script>
     </head>
 
     <body>
         <header class="site-header">
             <div class="site-nav">
-                <a href=""
+                <a href="#home"
                     ><img
                         src="images/eco-logo.svg"
                         alt="eco logo"
@@ -36,33 +62,52 @@
                 <ul class="site-nav-top">
                     <li class="menu-blog">
                         <img src="images/blog-icon.svg" alt="Blog icon" />
-                        <a href="">Blog</a>
+                        <a href="https://eco.com/blog/" target="_blank">Blog</a>
                     </li>
                     <li class="menu-docs">
                         <img src="images/docs-icon.svg" alt="Docs icon" />
-                        <a href="">Docs</a>
+                        <a href="https://eco.com/docs/home" target="_blank"
+                            >Docs</a
+                        >
                     </li>
                     <li class="menu-forum">
                         <img src="images/forum-icon.svg" alt="Forum icon" />
-                        <a href="">Forum</a>
+                        <a href="https://forum.eco.com/" target="_blank"
+                            >Forum</a
+                        >
                     </li>
                     <li class="menu-support">
                         <img
                             src="images/support-icon.svg"
                             alt="Support icon"
-                        /><a href="">Support</a>
+                        /><a href="https://eco.com/support/en" target="_blank"
+                            >Support</a
+                        >
                     </li>
                     <li class="menu-jobs">
                         <img src="images/jobs-icon.svg" alt="Jobs icon" /><a
-                            href=""
+                            href="https://job-boards.greenhouse.io/ecoinc"
+                            target="_blank"
                             >Jobs</a
                         >
                     </li>
                 </ul>
                 <ul class="site-nav-bottom">
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Privacy Policy</a></li>
-                    <li><a href="">Terms of Service</a></li>
+                    <li><a href="mailto:contact@eco.com">Contact</a></li>
+                    <li>
+                        <a
+                            href="https://eco.com/privacy-policy/"
+                            target="_blank"
+                            >Privacy Policy</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://eco.com/terms-of-service/"
+                            target="_blank"
+                            >Terms of Service</a
+                        >
+                    </li>
                     <li>
                         <p>&copy; 2025 Eco</p>
                     </li>
@@ -231,7 +276,7 @@
 
                 <div class="get-updates">
                     <button class="get-updates">
-                        <a href="">Get Updates</a>
+                        <a href="#">Get Updates</a>
                     </button>
                 </div>
             </section>
@@ -243,15 +288,40 @@
                     <li>
                         <p class="colorChange">&copy; 2025 Eco</p>
                     </li>
-                    <li><a href="" class="colorChange">Contact</a></li>
-                    <li><a href="" class="colorChange">Jobs</a></li>
-                    <li><a href="" class="colorChange">Privacy Policy</a></li>
-                    <li><a href="" class="colorChange">Terms of Service</a></li>
+                    <li>
+                        <a href="mailto:contact@eco.com" class="colorChange"
+                            >Contact</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://job-boards.greenhouse.io/ecoinc"
+                            target="_blank"
+                            class="colorChange"
+                            >Jobs</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://eco.com/privacy-policy/"
+                            target="_blank"
+                            class="colorChange"
+                            >Privacy Policy</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://eco.com/terms-of-service/"
+                            target="_blank"
+                            class="colorChange"
+                            >Terms of Service</a
+                        >
+                    </li>
                 </ul>
             </nav>
             <ul class="social-media">
                 <li>
-                    <a href=""
+                    <a href="https://x.com/intent/user?screen_name=eco&mx=2"
                         ><img
                             src="images/x-logo.svg"
                             alt="X logo"
@@ -259,7 +329,7 @@
                     /></a>
                 </li>
                 <li>
-                    <a href=""
+                    <a href="https://discord.com/invite/ecommunity"
                         ><img
                             src="images/discord-logo.svg"
                             alt="Discord logo"
@@ -267,7 +337,7 @@
                     /></a>
                 </li>
                 <li>
-                    <a href=""
+                    <a href="https://www.linkedin.com/company/ecoproto/"
                         ><img
                             src="images/linkedin-logo.svg"
                             alt="Linkedin logo"
@@ -275,7 +345,7 @@
                     /></a>
                 </li>
                 <li>
-                    <a href=""
+                    <a href="https://www.facebook.com/eco/"
                         ><img
                             src="images/facebook-logo.svg"
                             alt="Facebook logo"
