Minor edits made for the section layout

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
                 <div class="text-content">
                     <h2>A protocol for stablecoins</h2>
-                    <p>And for the apps that use them</p>
+                    <p>And for the apps that use them.</p>
                     <p>
                         Eco is designed to be the default protocol for apps that
                         use stablecoins or need stablecoin liquidity. Eco
@@ -245,9 +245,10 @@
                     </h2>
                     <p style="color: rgb(35, 44, 71)">
                         The Eco Protocol is an Ethereum-based rollup and
-                        permissonless liquidity network designed from the ground
-                        up for the most capital efficient stablecoin transaction
-                        execution with the simplest possible user experience.
+                        permissionless liquidity network designed from the
+                        ground up for the most capital efficient stablecoin
+                        transaction execution with the simplest possible user
+                        experience.
                     </p>
 
                     <div class="more-details">
