Updated html and script files for consistency

--- a/index.html
+++ b/index.html
@@ -177,14 +177,13 @@
                 </div>
             </section>
 
-            <!--About - Steph  -->
+            <!-- About - Steph -->
             <section class="about section" id="about">
                 <img
                     src="images/logo-about.svg"
                     alt="eco symbol in the background"
                     class="e-bg-symbol"
                 />
-
                 <div class="text-content">
                     <h2>A protocol for stablecoins</h2>
                     <p>And for the apps that use them.</p>
@@ -198,10 +197,14 @@
 
                     <div class="more-docs">
                         <button class="learn-more">
-                            <a href="https://eco.com/blog/">Learn More</a>
+                            <a href="https://eco.com/blog/" target="_blank"
+                                >Learn More</a
+                            >
                         </button>
                         <button class="read-docs">
-                            <a href="https://eco.com/docs/home">Read Docs</a>
+                            <a href="https://eco.com/docs/home" target="_blank"
+                                >Read Docs</a
+                            >
                         </button>
                     </div>
                 </div>
@@ -238,7 +241,6 @@
                     alt="eco symbol in the background"
                     class="e-bg-symbol"
                 />
-
                 <div class="text-content">
                     <h2 style="color: rgb(19, 25, 44)">
                         A full stack upgrade for transacting onchain
@@ -253,20 +255,21 @@
 
                     <div class="more-details">
                         <button class="more-details">
-                            <a href="https://eco.com/docs/home">More Details</a>
+                            <a href="https://eco.com/docs/home" target="_blank"
+                                >More Details</a
+                            >
                         </button>
                     </div>
                 </div>
             </section>
 
-            <!-- stay-updated-section -->
+            <!-- Stay Updated - Emerson -->
             <section class="stay-updated section" id="stay-updated">
                 <img
                     src="images/logo-stay-updated.svg"
                     alt="eco symbol in the background"
                     class="e-bg-symbol"
                 />
-
                 <div class="text-content">
                     <h2>Stay Updated</h2>
                     <p>
@@ -274,13 +277,11 @@
                         there, watch for early access opening soon.
                     </p>
                     <div class="get-updates">
-                    <button class="get-updates">
-                        <a href="#">Get Updates</a>
-                    </button>
+                        <button class="get-updates">
+                            <a href="#">Get Updates</a>
+                        </button>
+                    </div>
                 </div>
-                </div>
-
-                
             </section>
         </main>
 
@@ -323,7 +324,9 @@
             </nav>
             <ul class="social-media">
                 <li>
-                    <a href="https://x.com/intent/user?screen_name=eco&mx=2"
+                    <a
+                        href="https://x.com/intent/user?screen_name=eco&mx=2"
+                        target="_blank"
                         ><img
                             src="images/x-logo.svg"
                             alt="X logo"
@@ -331,7 +334,9 @@
                     /></a>
                 </li>
                 <li>
-                    <a href="https://discord.com/invite/ecommunity"
+                    <a
+                        href="https://discord.com/invite/ecommunity"
+                        target="_blank"
                         ><img
                             src="images/discord-logo.svg"
                             alt="Discord logo"
@@ -339,7 +344,9 @@
                     /></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/company/ecoproto/"
+                    <a
+                        href="https://www.linkedin.com/company/ecoproto/"
+                        target="_blank"
                         ><img
                             src="images/linkedin-logo.svg"
                             alt="Linkedin logo"
@@ -347,7 +354,7 @@
                     /></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/eco/"
+                    <a href="https://www.facebook.com/eco/" target="_blank"
                         ><img
                             src="images/facebook-logo.svg"
                             alt="Facebook logo"
