Final code cleanup

--- a/index.html
+++ b/index.html
@@ -234,7 +234,6 @@
             </section>
 
             <!-- Design - Steph -->
-
             <section class="design section" id="design">
                 <img
                     src="images/logo-design.svg"
@@ -242,9 +241,7 @@
                     class="e-bg-symbol"
                 />
                 <div class="text-content">
-                    <h2>
-                        A full stack upgrade for transacting onchain
-                    </h2>
+                    <h2>A full stack upgrade for transacting onchain</h2>
                     <p>
                         The Eco Protocol is an Ethereum-based rollup and
                         permissionless liquidity network designed from the
